penyesuaian bagian model dan swagger
