# docs/swagger.json
@@ -74,12 +74,15 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "Riwayat kehadiran berhasil diambil",
+                        "description": "Riwayat kehadiran berhasil diambil\" // \u003c-- Perbaikan di sini",
                         "schema": {
                             "type": "object",
                             "properties": {
                                 "data": {
-                                    "type": "array"
+                                    "type": "array",
+                                    "items": {
+                                        "$ref": "#/definitions/models.AttendanceWithUser"
+                                    }
                                 },
                                 "limit": {
                                     "type": "integer"
@@ -501,12 +504,15 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "Data users berhasil diambil",
+                        "description": "Data users berhasil diambil\" // \u003c-- Perbaikan di sini",
                         "schema": {
                             "type": "object",
                             "properties": {
                                 "data": {
-                                    "type": "array"
+                                    "type": "array",
+                                    "items": {
+                                        "$ref": "#/definitions/models.User"
+                                    }
                                 },
                                 "limit": {
                                     "type": "integer"
@@ -2509,12 +2515,15 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "Daftar jadwal kerja berhasil diambil",
+                        "description": "Daftar jadwal kerja berhasil diambil\" // \u003c-- Perbaikan di sini",
                         "schema": {
                             "type": "object",
                             "properties": {
                                 "data": {
-                                    "type": "array"
+                                    "type": "array",
+                                    "items": {
+                                        "$ref": "#/definitions/models.WorkSchedule"
+                                    }
                                 }
                             }
                         }
@@ -2690,7 +2699,6 @@
                     "type": "string"
                 },
                 "status": {
-                    "description": "--- DISESUAIKAN ---",
                     "type": "string",
                     "enum": [
                         "Hadir",
@@ -3034,6 +3042,7 @@
         "models.UserRegisterPayload": {
             "type": "object",
             "required": [
+                "email",
                 "name",
                 "password",
                 "role"
@@ -3115,7 +3124,6 @@
                     "type": "string"
                 },
                 "date": {
-                    "description": "Akan menjadi tanggal MULAI jadwal",
                     "type": "string"
                 },
                 "end_time": {
@@ -3128,7 +3136,6 @@
                     "type": "string"
                 },
                 "recurrence_rule": {
-                    "description": "\u003c-- TAMBAHKAN INI",
                     "type": "string"
                 },
                 "start_time": {
